sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: value ==- is not a member of Int
    else if (nain==0 | nain==-1) {
                           ^